--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <option>weight</option>
             <option>form</option>
             <option>structure</option>
-            <option>direction</option>
-            <option selected>scale</option>
+            <option selected>direction</option>
+            <option>scale</option>
             <option>texture</option>
             <option>color</option>
 
